# agents

./: .gitignore  Dockerfile  README.md  requirements.txt  world.py
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  app.py
1_foundations/me/: summary_aman.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
3_crew/coder/output/: code_and_output.txt
3_crew/coder/src/coder/: crew.py
3_crew/debate/output/: decide.md  oppose.md  philosoper.md  propose.md
3_crew/debate/src/debate/: crew.py
3_crew/debate/src/debate/config/: agents.yaml  tasks.yaml
3_crew/demo_project/: README.md  pyproject.toml
3_crew/demo_project/knowledge/: user_preference.txt
3_crew/demo_project/src/demo_project/: crew.py  main.py
3_crew/financial_researcher/output/: report.md
3_crew/financial_researcher/src/financial_researcher/: main.py
3_crew/stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/stock_picker/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker/src/stock_picker/: crew.py  main.py
4_langgraph/: 3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal
4_langgraph/sandbox/: calculate_pi.py  conversation.txt
5_autogen/: 4_lab4_autogen_distributed.ipynb
5_autogen/sandbox/: flights.md
6_mcp/: 2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  accounts_client.py  accounts_server.py  alpha_client.py  market.py  mcp_params.py  vscode_mcp.ipynb
6_mcp/sandbox/: banoffee.md  medu_vada.md
output/: idea1.md  idea2.md
(+3 files in other folders)
