[project]
name = "demo_project"
version = "0.1.0"
description = "demo-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
demo_project = "demo_project.main:run"
run_crew = "demo_project.main:run"
train = "demo_project.main:train"
replay = "demo_project.main:replay"
test = "demo_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
